--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,9 @@ body{
 .row{
     margin: 0;
 }
+img{
+    object-fit: cover;
+}
 
 .contenedor .back{
     font-family: 'Poppins', sans-serif;
@@ -109,7 +112,7 @@ nav .toolbar .buy-btn{
 }
 
 @keyframes movimiento{
-    from{transform:translateY(70%)}
+    from{transform:translateY(104%)}
     to{transform: translateY(0%);}
     from{opacity: 0.9;}
     to{opacity: 1;}
@@ -121,4 +124,16 @@ nav .toolbar .buy-btn{
     50%{transform: translateY(0%);}
     75%{transform: translateY(-3%);}
     100%{transform: translateY(0%);}
+}
+
+@media only screen and (min-width:700px){
+    .contenedor{
+        display: none;
+    }
+    .caja{
+        display: none;
+    }
+    nav{
+        display: none;
+    }
 }
